# conways_game

./: .coveragerc  LICENSE  README.md  code_of_conduct.md  pyproject.toml  setup.py
docs/: conf.py  index.rst
src/conways_game/: __init__.py  __main__.py  conways_game.py  lists_v.py  new.py  newwwww.py  numpy_v.py  test.py  vectorial.py
tests/: test_conways_game.py
